# recipes-should-not-be-blogs

./: .gitmodules  Cargo.toml  chatgptresponse  prompt  readme.md  recipe.md  website
rsnbb/: config.toml
rsnbb/content/: Buttermilk Cornbread.md  Chili Crunch Tofu.md  Classic Cornbread Recipe.md  Easy Sugar Cookies.md  Spicy Stir-Fried Pork (Dwaejigogi-bokkeum).md  Sweet and Spicy Chicken.md  recipe.md
rsnbb/content/about/: _index.md
rsnbb/content/recipes/: _index.md  recipe.md
src/: example.rs  main.rs  markdown.rs  recipe.rs  webscraper.rs
