[package]
name = "rr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.17", features = ["default", "blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
scraper = "0.12.0"
regex = "1.8.1"
html2text = "0.5.1"
openai = "1.0.0-alpha.8"
dotenvy = "0.15.7"
serde_json = "1.0.96"
clap = { version = "4.3.1", features = ["derive"] }
